# Huertas_MicaelaAdriana_ExamenCPP

./: CMakeLists.txt  README.md  main.cpp  main.h
ejercicio 1/: ejercicio_1.cpp  ejercicio_1.h
ejercicio 2/: ejercicio_2.cpp  ejercicio_2.h
ejercicio 3/: ejercicio_3.cpp  ejercicio_3.h
ejercicio 4/: ejercicio_4.cpp  ejercicio_4.h
